# RoRvzzz-Account-Manager

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  api.ts  index.css  theme.ts  toast.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  crypto.rs  deploy.rs  error.rs  favorites.rs  fps.rs  launcher.rs  lib.rs  main.rs  nexus.rs  platform.rs  recents.rs  roblox.rs  settings.rs  store.rs  watcher.rs  webapi.rs
src/components/: AccountRow.tsx  AccountUtilitiesModal.tsx  AddAccountModal.tsx  ControlPanelModal.tsx  DeploymentsModal.tsx  DescriptionModal.tsx  GamePanel.tsx  GitHubStars.tsx  Modal.tsx  MoveGroupModal.tsx  Select.tsx  SettingsModal.tsx  TitleBar.tsx  Tooltip.tsx  UpdatePrompt.tsx  UtilitiesModal.tsx
