[package]
name = "ram-tauri"
version = "1.0.0"
description = "Roblox Account Manager — Rust + Tauri rewrite"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "ram_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
directories = "5"
rand = "0.8"
chacha20poly1305 = "0.10"
argon2 = "0.5"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.33"
tokio-tungstenite = "0.24"
futures-util = "0.3"
url = "2"
tiny_http = "0.12"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = "s"
lto = true
strip = true
